# KYC_AML

./: .cursorrules  .env.example  .gitignore  KYC-AML-Agent-Build-Plan.md  LICENSE  README.md  pyproject.toml
scripts/: download_data.sh  train_model.py
src/: api.py  config.py  graph.py  state.py  ui.py
src/agents/: intake.py  monitoring.py  risk_scoring.py  sar_draft.py  screening.py
src/data/: generate_kyc_docs.py  sanctions.py  transactions.py
tests/: test_extraction.py  test_graph.py  test_matcher.py  test_state.py
